# agent-firewall

./: .gitignore  README.md  agent.py  eval_results.json  eval_runner.py  pyproject.toml  render.yaml  requirements.txt
agentguard/: __init__.py  __main__.py  demo_event_store.py  interceptor.py  models.py
agentguard/api/: __init__.py  app.py  auth.py  dashboard_api.py  frontend.py  routes.py
agentguard/config/: __init__.py  auth_settings.py  config_loader.py  default_policy.yaml
agentguard/engine/: __init__.py  dataflow_analyzer.py  injection_detector.py  llm_analyzer.py  policy_engine.py  scope_analyzer.py  sensitive_matcher.py  tool_normalizer.py
agentguard/static/: app.js  index.html  styles.css
demo_files/: .env  config.yaml  id_rsa  notes.txt
frontend/static/: app.js  index.html  interceptor_demo.js  report.js  styles.css
frontend/templates/: base.html  dashboard.html  eval.html  index.html  report.html
tests/: test_api.py  test_dataflow_analyzer.py  test_injection_detector.py  test_llm_analyzer.py  test_policy_engine.py  test_scope_analyzer.py  test_sensitive_matcher.py  test_tool_normalization.py
